--- a/webapp/Views/PengurusanKakitanganSambilan/_BonusSambilanPartial.cshtml
+++ b/webapp/Views/PengurusanKakitanganSambilan/_BonusSambilanPartial.cshtml
@@ -56,9 +56,12 @@
 							<td width="5%">
 								@item.peribadi.HR_MAKLUMAT_PEKERJAAN.HR_NO_KWSP
 							</td>
-							<td width="5%">
-								@item.peribadi.HR_MAKLUMAT_PEKERJAAN.HR_TARIKH_LANTIKAN.Value.ToString("dd/MM/yyyy")
-							</td>
+                            <td width="5%">
+                                @if(item.peribadi.HR_MAKLUMAT_PEKERJAAN.HR_TARIKH_LANTIKAN != null)
+                                {
+                                    item.peribadi.HR_MAKLUMAT_PEKERJAAN.HR_TARIKH_LANTIKAN.Value.ToString("dd/MM/yyyy");
+                                }
+                            </td>
 							@{ var no2 = 0; }
 							@while (ViewBag.max > no2)
 							{
